@@ -39,9 +39,18 @@ import com.anzymus.neogeo.hiscores.service.PlayerService;
 import com.anzymus.neogeo.hiscores.service.ScoreService;
 import com.anzymus.neogeo.hiscores.service.TitleUnlockingService;
 import com.google.common.annotations.VisibleForTesting;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Iterator;
+import java.util.Map;
+import javax.faces.event.ValueChangeEvent;
 
 @ManagedBean
 public class ScoreBean {
+    public static final String ALL_CLEAR = "ALL CLEAR";
+    public static final String DEFAULT_GAME = "3 Count Bout (3 minutes)";
+    public static final int DEFAULT_POST_ID = 41930;
+    public static final Logger LOG = Logger.getLogger(ScoreBean.class.getName());
 
     @EJB
     ScoreService scoreService;
@@ -76,22 +85,59 @@ public class ScoreBean {
 
     @VisibleForTesting
     FacesContext facesContext = FacesContext.getCurrentInstance();
-
+    
+    private boolean showPostCheckBox;
+    
+    private List<String> customStageValues = new ArrayList<String>();
+    
+    private Map<String, String> parameters = facesContext.getExternalContext().getRequestParameterMap();
+        
     @PostConstruct
     public void init() {
-        if (id != null) {
-            Score scoreFromDb = scoreService.findById(Integer.parseInt(id));
-            fullname = scoreFromDb.getPlayer().getFullname();
-            score = scoreFromDb.getValue();
-            pictureUrl = scoreFromDb.getPictureUrl();
-            message = scoreFromDb.getMessage();
-            stage = scoreFromDb.getStage();
-            currentLevel = scoreFromDb.getLevel();
-            currentGame = scoreFromDb.getGame().getId();
-            allClear = scoreFromDb.getAllClear();
+        Game game;
+        if (initAfterGameSelection()) {
+            initFromRequest();
+            game = gameService.findById(currentGame);
+        } else if (initBeforeEditing()) {
+            game = initFromDatabase();
         } else {
-            currentGame = gameService.findByName("3 Count Bout (3 minutes)").getId();
+            game = gameService.findByName(DEFAULT_GAME);
+            currentGame = game.getId();
         }
+        updateFormWithSelectedGame(game);
+    }
+
+    private Game initFromDatabase() throws NumberFormatException {
+        Score scoreFromDb = scoreService.findById(Integer.parseInt(id));
+        Game game = scoreFromDb.getGame();
+        fullname = scoreFromDb.getPlayer().getFullname();
+        score = scoreFromDb.getValue();
+        pictureUrl = scoreFromDb.getPictureUrl();
+        message = scoreFromDb.getMessage();
+        stage = scoreFromDb.getStage();
+        currentLevel = scoreFromDb.getLevel();
+        currentGame = game.getId();
+        allClear = scoreFromDb.getAllClear();
+        return game;
+    }
+
+    private void initFromRequest() throws NumberFormatException {
+        fullname = parameters.get("form:fullname");
+        score = parameters.get("form:score");
+        pictureUrl = parameters.get("form:pictureUrl");
+        message = parameters.get("form:message");
+        stage = parameters.get("form:stage");
+        currentLevel = parameters.get("form:currentLevel");
+        currentGame = Long.valueOf(parameters.get("form:selectGame"));
+        allClear = "true".equals(parameters.get("form:allClear"));
+    }
+
+    private boolean initBeforeEditing() {
+        return id != null;
+    }
+
+    private boolean initAfterGameSelection() {
+        return parameters.get("form:id") != null;
     }
 
     public String add() {
@@ -111,7 +157,48 @@ public class ScoreBean {
             return "score/create";
         }
     }
+    
+    
+    public String edit() {
+        try {
+            NeoGeoFansClient authenticator = neoGeoFansClientFactory.create();
+            boolean isAuthenticated = authenticator.authenticate(fullname, password);
+            if (isAuthenticated) {
+                updateScore();
+                return "home";
+            } else {
+                facesContext.addMessage(null, new FacesMessage("The password is not a valid NGF password"));
+                return "score/edit";
+            }
+        } catch (AuthenticationFailed ex) {
+            LOG.log(Level.SEVERE, null, ex);
+            facesContext.addMessage(null, new FacesMessage(ex.getMessage()));
+            return "score/edit";
+        }
+    }
 
+    private void removeValidationErrors() {
+        Iterator<FacesMessage> messages = facesContext.getMessages();
+        while (messages.hasNext()) {
+            messages.next();
+            messages.remove();
+        }
+    }
+
+    private void updateScore() throws NumberFormatException {
+        Game game = gameService.findById(currentGame);
+        Score scoreFromDb = scoreService.findById(Integer.parseInt(id));
+        scoreFromDb.setMessage(message);
+        scoreFromDb.setGame(game);
+        scoreFromDb.setPictureUrl(pictureUrl);
+        scoreFromDb.setLevel(currentLevel);
+        scoreFromDb.setValue(score);
+        scoreFromDb.setAllClear(allClear || ALL_CLEAR.equals(stage));
+        scoreFromDb.setStage(stage);
+        scoreService.store(scoreFromDb);
+        updateFormWithSelectedGame(game);
+    }
+    
     private void acceptScore(NeoGeoFansClient ngfClient) {
         Game game = gameService.findById(currentGame);
         Player player = playerService.findByFullname(fullname);
@@ -119,7 +206,7 @@ public class ScoreBean {
             player = playerService.store(new Player(fullname));
         }
         Score scoreToAdd = new Score(score, player, currentLevel, game, pictureUrl);
-        scoreToAdd.setAllClear(allClear);
+        scoreToAdd.setAllClear(allClear || ALL_CLEAR.equals(stage));
         scoreToAdd.setStage(stage);
         int end = message.length() > MAX_MESSAGE_LENGTH ? MAX_MESSAGE_LENGTH : message.length();
         scoreToAdd.setMessage(message.substring(0, end));
@@ -140,31 +227,22 @@ public class ScoreBean {
         }
     }
 
-    public String edit() {
-        try {
-            NeoGeoFansClient authenticator = neoGeoFansClientFactory.create();
-            boolean isAuthenticated = authenticator.authenticate(fullname, password);
-            if (isAuthenticated) {
-                Game game = gameService.findById(currentGame);
-                Score scoreFromDb = scoreService.findById(Integer.parseInt(id));
-                scoreFromDb.setMessage(message);
-                scoreFromDb.setGame(game);
-                scoreFromDb.setPictureUrl(pictureUrl);
-                scoreFromDb.setLevel(currentLevel);
-                scoreFromDb.setValue(score);
-                scoreFromDb.setAllClear(allClear);
-                scoreFromDb.setStage(stage);
-                scoreService.store(scoreFromDb);
-                return "home";
-            } else {
-                facesContext.addMessage(null, new FacesMessage("The password is not a valid NGF password"));
-                return "score/edit";
-            }
-        } catch (AuthenticationFailed ex) {
-            Logger.getLogger(ScoreBean.class.getName()).log(Level.SEVERE, null, ex);
-            facesContext.addMessage(null, new FacesMessage(ex.getMessage()));
-            return "score/edit";
+    public void selectGame(ValueChangeEvent event) {
+        long gameId = (Long) event.getNewValue();
+        Game game = gameService.findById(gameId);
+        updateFormWithSelectedGame(game);
+    }
+
+    private void updateFormWithSelectedGame(Game game) {
+        showPostCheckBox = game.getPostId() != DEFAULT_POST_ID;
+        String stageValues = game.getCustomStageValues();
+        if (stageValues != null) {
+            customStageValues.clear();
+            customStageValues.addAll(Arrays.asList(stageValues.split(";")));
+            customStageValues.add(ALL_CLEAR);
+            stage = customStageValues.get(0);
         }
+        removeValidationErrors();
     }
 
     public List<Game> getGames() {
@@ -279,4 +357,20 @@ public class ScoreBean {
         this.stage = stage;
     }
 
+    public boolean isShowPostCheckBox() {
+        return showPostCheckBox;
+    }
+
+    public void setShowPostCheckBox(boolean showPostCheckBox) {
+        this.showPostCheckBox = showPostCheckBox;
+    }
+
+    public List<String> getCustomStageValues() {
+        return customStageValues;
+    }
+
+    public void setCustomStageValues(List<String> customStageValues) {
+        this.customStageValues = customStageValues;
+    }
+    
 }
