@@ -22,54 +22,65 @@
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:fn="http://java.sun.com/jsp/jstl/functions"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
     <ui:define name="content_right">
         <center>
             <h2>Update my score</h2>
             <h:form id="form">
-				
-				<h:messages styleClass="error" />
-            	<br/><br/>
+
+                <h:messages styleClass="error" />
                 
                 <h:panelGrid columns="2" >
-                    <h:outputText value="Picture Url: " />
-                    <h:inputText id="pictureUrl" value="#{scoreBean.pictureUrl}" onkeyup="document.getElementById('picture').src=this.value" required="true" style="width:100%" >
-                        <f:validateRegex pattern="(http):\/\/(\w+:{0,1}\w*@)?(\S+)(:[0-9]+)?(\/|\/([\w#!:.?+=%@!\-\/]))?" />
-                    </h:inputText>
-                    
-                    <h:outputText />
-                    <img id="picture" src="#{scoreBean.pictureUrl}" width="500px"/>
-                    
-                    <h:outputText value="NGF login " />
-                    <h:outputText id="fullname_" value="#{scoreBean.fullname}" />
-                    
-                    <h:outputText value="NGF password: " />
-                    <h:inputSecret id="password" value="#{scoreBean.password}" required="true" >
-                        <f:validateLength minimum="1" />
-                    </h:inputSecret>
-                    
-                    <h:outputText value="Score: " />
-                    <h:inputText id="score" value="#{scoreBean.score}" maxlength="10" size="10" required="true" />
-                    
-                    <h:outputText value="Stage: " />
-                	<h:inputText id="stage" value="#{scoreBean.stage}" maxlength="10" size="10" required="true" />
-                    
-                    <h:outputText value="All Clear: " />
-                    <h:selectBooleanCheckbox id="allClear" value="#{scoreBean.allClear}" />
-                    
+
                     <h:outputText value="Game: " />
-                    <h:selectOneMenu id="selectGame" value="#{scoreBean.currentGame}" >
+                    <h:selectOneMenu id="selectGame" value="#{scoreBean.currentGame}" onchange="submit()" valueChangeListener="#{scoreBean.selectGame}">
+                        <f:ajax event="select" render="post_on_ngf" /> 
                         <f:selectItems itemLabel="${game.name}" itemValue="${game.id}" var="game" value="${scoreBean.games}" />
                     </h:selectOneMenu>
-                    
+
+                    <h:outputText value="Picture Url: " />
+                    <h:inputText id="pictureUrl" value="#{scoreBean.pictureUrl}" onkeyup="document.getElementById('picture').src=this.value" onfocus="clearText(this)" required="true" style="width:100%" >
+                        <f:validateRegex pattern="(http):\/\/(\w+:{0,1}\w*@)?(\S+)(:[0-9]+)?(\/|\/([\w#!:.?+=%@!\-\/]))?" />
+                    </h:inputText>
+
+                    <h:outputText />
+                    <img id="picture" src="" width="500px"/>
+
                     <h:outputText value="Level: " />
                     <h:selectOneMenu id="selectLevel" value="#{scoreBean.currentLevel}">
                         <f:selectItems value="#{scoreBean.levelList}" />
                     </h:selectOneMenu>
-                    
+
+                    <h:outputText value="Score: " />
+                    <h:inputText id="score" value="#{scoreBean.score}" maxlength="10" size="10" required="true" />
+
+                    <h:outputText value="Stage: " rendered="#{fn:length(scoreBean.customStageValues) == 0}" />
+                    <h:inputText id="stage" value="#{scoreBean.stage}" maxlength="10" size="10" required="true" rendered="#{fn:length(scoreBean.customStageValues) == 0}" />
+
+                    <h:outputText value="All Clear: " rendered="#{fn:length(scoreBean.customStageValues) == 0}" />
+                    <h:selectBooleanCheckbox id="allClear" value="#{scoreBean.allClear}" rendered="#{fn:length(scoreBean.customStageValues) == 0}" style="margin-left:0" />
+
+                    <h:outputText value="Stage: " rendered="#{fn:length(scoreBean.customStageValues) > 0}"/>
+                    <h:selectOneMenu id="selectStage" value="#{scoreBean.customStageValues}" rendered="#{fn:length(scoreBean.customStageValues) > 0}">
+                        <f:selectItems value="#{scoreBean.customStageValues}" />
+                    </h:selectOneMenu>
+
                     <h:outputText value="Message: " />
                     <h:inputTextarea id="message" value="#{scoreBean.message}" cols="40" rows="5" style="width:100%" />
+
+                    <h:outputText value="Post on NGF: " id="post_on_ngf" rendered="#{scoreBean.showPostCheckBox}" />
+                    <h:selectBooleanCheckbox id="postOnNgf" value="#{scoreBean.postOnNgf}" rendered="#{scoreBean.showPostCheckBox}" style="margin-left:0" />
+
+                    <h:outputText value="NGF login: " />
+                    <h:outputText id="fullname_" value="#{scoreBean.fullname}" />
+
+                    <h:outputText value="NGF password: " />
+                    <h:inputSecret id="password" value="#{scoreBean.password}" required="true" >
+                        <f:validateLength minimum="1" />
+                    </h:inputSecret>
+
 
                     <h:commandButton id="submit" value="${msgs.form_button_update}" action="#{scoreBean.edit}" />
                 </h:panelGrid>
