@@ -68,7 +68,7 @@
             </div>
             <div id="footer">
                 <p style="color: rgb(118, 118, 118); font-size: 8pt;">Neo Geo Hi-Scores version ${msgs.version} | ©2011</p>
-                <p><a href="http://www.twitter.com/neogeohiscores"><img src="http://twitter-badges.s3.amazonaws.com/twitter-c.png" alt="Follow neogeohiscores on Twitter"/></a> <a href="http://88.191.117.240/rss/timeline.xml"><img src="${contextPathStatic}/myimages/icon_rss.gif" alt="rss" /></a></p>
+                <p><a href="http://www.twitter.com/neogeohiscores"><img src="http://twitter-badges.s3.amazonaws.com/twitter-c.png" alt="Follow neogeohiscores on Twitter"/></a> <a href="http://88.191.117.240/rss/timeline.xml" style="vertical-align: text-top;" ><img src="${contextPathStatic}/myimages/icon_rss.gif" alt="rss" /></a></p>
             </div>
         </center>
     </h:body>
