@@ -1,5 +1,7 @@
 1.3.4
 - feature: add AllClear 2, 5, 10 title
+- graphic: hide post on ngf checkbox if game is not handled
+- graphic: add custom stage values
 
 1.3.3
 - feature: add link to NGF
